update : 토큰검증 로직 수정, toList 메서드 리팩토링, 글로벌 익셉션 로그 레벨 수정